--- a/pv/index.html
+++ b/pv/index.html
@@ -6,7 +6,7 @@
     <title>Live Stream - Youtube</title>
     <link rel="stylesheet" href="assets/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <style>.esconder{display:;}</style>
+    <style>.esconder{display:none;}</style>
 
      <script>
        !function(f,b,e,v,n,t,s)
