--- a/pv/index.html
+++ b/pv/index.html
@@ -8,6 +8,15 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>.esconder{display:none;}</style>
 
+    <script>!function(i,n){i._plt=i._plt||(n&&n.timeOrigin?n.timeOrigin+n.now():Date.now())}(window,performance);</script>
+    <link rel="preload" href="https://scripts.converteai.net/5e1e77d1-5855-4db5-a9b0-aa77619f0795/players/692c22fceb369a2bdb7bee5e/v4/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/lib/js/smartplayer-wc/v4/smartplayer.js" as="script">
+    <link rel="preload" href="https://cdn.converteai.net/5e1e77d1-5855-4db5-a9b0-aa77619f0795/692c22b441399c011616f364/main.m3u8" as="fetch">
+    <link rel="dns-prefetch" href="https://cdn.converteai.net">
+    <link rel="dns-prefetch" href="https://scripts.converteai.net">
+    <link rel="dns-prefetch" href="https://images.converteai.net">
+    <link rel="dns-prefetch" href="https://api.vturb.com.br">
+
      <script>
        !function(f,b,e,v,n,t,s)
        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -19,14 +28,19 @@
        'https://connect.facebook.net/en_US/fbevents.js');
        fbq('init', '392496843577678');
        fbq('track', 'ViewContent');
-       </script>
+     </script>
        <noscript><img height="1" width="1" style="display:none"
        src="https://www.facebook.com/tr?id=392496843577678&ev=ViewContent&noscript=1"/>
        </noscript>
        
-       <!-- RedTrack -->
-       <script type="text/javascript" src="https://rt.bloodsugarcare.online/track.js"></script>
-       <!-- END RT -->
+       <!-- UTMfy -->
+       <script
+          src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+          data-utmify-prevent-xcod-sck
+          async
+          defer
+        >
+        </script>
 </head>
 <body>
     <header class="header">
@@ -69,8 +83,7 @@
             <div class="video-container">
 
                 <!-- VSL VTURB -->
-                <vturb-smartplayer id="vid-685becd66b8baf338be1b714" style="display: block; margin: 0 auto; width: 100%; "></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/bf3f4bad-0141-41d4-9901-1fd62546db6f/players/685becd66b8baf338be1b714/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
-
+                <vturb-smartplayer id="vid-692c22fceb369a2bdb7bee5e" style="display: block; margin: 0 auto; width: 100%; "></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/5e1e77d1-5855-4db5-a9b0-aa77619f0795/players/692c22fceb369a2bdb7bee5e/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
                 <!--
                 <div class="live-indicator">
                     <span class="live-badge">AO VIVO</span>
@@ -304,7 +317,7 @@
                                         <span style="font-size:35px">$</span>49<span style="font-size: 20px;display: inline-block;text-align: left;padding-left: 5px;">per<br>bottle</span>
                                     </p>
                                     <p style="font-weight: 700;font-size: 25px;color: #000;">YOU SAVE <span style="color:#00b400">$780</span></p>
-                                    <a class="smartplayer-scroll-event" href="https://rt.bloodsugarcare.online/click/3">
+                                    <a class="smartplayer-scroll-event" href="https://buygoods.com/secure/checkout.html?account_id=11265&product_codename=red6&redirect=aHR0cHM6Ly9yZWR1YnVybi5jb20vdXAxLTZiLw==&aff_id=181758">
                                         <img style="width: 100%;margin: 10px 0;padding: 0 20px; animation: pulse 1.5s infinite alternate !important;" src="img/buy-now2.webp">
                                     </a>
                                     <img style="width: 100%;padding: 10px" src="img/pay.webp">
@@ -323,7 +336,7 @@
                                     <img style="width: 100%;margin: 20px 0;" src="img/3potes.png">
                                     <p style="font-size: 90px;font-weight: 700;color: #000;margin: 0;font-family: 'Montserrat', Sans-serif;"><span style="font-size:35px">$</span>59<span style="font-size: 20px;display: inline-block;text-align: left;padding-left: 5px;">per<br>bottle</span></p>
                                     <p style="font-weight: 700;font-size: 25px;color: #000;">YOU SAVE <span style="color:#00b400">$360</span></p>
-                                    <a href="https://rt.bloodsugarcare.online/click/2">
+                                    <a href="https://buygoods.com/secure/checkout.html?account_id=11265&product_codename=red3&redirect=aHR0cHM6Ly9yZWR1YnVybi5jb20vdXAxLTNiLw==&aff_id=181758">
                                         <img style="width: 100%;margin: 10px 0;padding: 0 20px;animation: pulse 1.5s infinite alternate !important;" src="img/buy-now2.webp">
                                     </a>
                                     <img style="width: 100%;padding: 10px" src="img/pay.webp">
@@ -342,7 +355,7 @@
                                     <img style="width: 100%;margin: 20px 0;" src="img/1pote.png">
                                     <p style="font-size: 90px;font-weight: 700;color: #000;margin: 0;font-family: 'Montserrat', Sans-serif;"><span style="font-size:35px">$</span>79<span style="font-size: 20px;display: inline-block;text-align: left;padding-left: 5px;">per<br>bottle</span></p>
                                     <p style="font-weight: 700;font-size: 25px;color: #000;">YOU SAVE <span style="color:#00b400">$110</span></p>
-                                    <a href="https://rt.bloodsugarcare.online/click/1">
+                                    <a href="https://buygoods.com/secure/checkout.html?account_id=11265&product_codename=red1&redirect=aHR0cHM6Ly9yZWR1YnVybi5jb20vdXAxLTFiLw==&aff_id=181758">
                                         <img style="width: 100%;margin: 10px 0;padding: 0 20px;animation: pulse 1.5s infinite alternate !important;" src="img/buy-now2.webp">
                                     </a>
                                     <img style="width: 100%;padding: 10px" src="img/pay.webp">
