--- a/pv/index.html
+++ b/pv/index.html
@@ -41,6 +41,15 @@
           defer
         >
         </script>
+        <script>
+          window.pixelId = "68d83d66a960005216e33994";
+          var a = document.createElement("script");
+          a.setAttribute("async", "");
+          a.setAttribute("defer", "");
+          a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+          document.head.appendChild(a);
+        </script>
+    
 </head>
 <body>
     <header class="header">
